# red-book

./: .gitignore  README.md  pyproject.toml
fhir_structure/patient_resource/: immunisation_resource.yml  patient_resource.yml
immunisations/: example_fhir_reponse_1.fhir  example_fhir_response_2.fhir  example_fhir_response_3.fhir  response_1.yaml
