[project]
name = "red_book_eatyourpeas"
version = "0.0.1"
authors = [
  { name="Simon Chapman", email="simon@eatyourpeas.co.uk" },
]
description = "A digital version of the Red Book"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/eatyourpeas/red-book"
Issues = "https://github.com/eatyourpeas/red-book/issues"